(lang dune 3.6)

(name dotsh)

(generate_opam_files true)

(source
 (github scjung/dotsh))

(authors "SeungCheol Jung")

(maintainers "SeungCheol Jung")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name dotsh)
 (synopsis "Dot shell")
 (description "A convenient command-line wrapper for editing Dot files")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
